# homer-ui

./: .browserslistrc  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.local  LICENSE  Makefile.am  README.md  angular-cli.json  angular.json  browserslist  configure.ac  custom-webpack.config.js  custom-widgets.json  dockerfile  ecosystem.config.js  homer-ui.spec.in  index.html  karma.conf.js  package-lock.json  package.json  swagger-styles.scss  tsconfig.app.json  tsconfig.json
.github/.ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml
.github/scripts/: bumpversion.sh
.github/workflows/: main.yml
api/: autoload.php  configuration.php  configuration_example.php  index.php  preferences.php  preferences_example.php
api/Authentication/: Authentication.php  Internal.php  LDAP.php
api/Database/: DefaultConnector.php  PDOConnector.php
api/RestApi/: Admin.php  Alarm.php  Auth.php  Dashboard.php  Profile.php  Report.php  Search.php  Statistic.php
css/: app.min.css  bootstrap.min.css  custom.css  fonts.css  fonts.min.css  homer.css  homer.min.css  homerModal.min.css  report-style.css
examples/: README  _1431279268787.json
js/: app.js  controller.js  homer.js
opt/: homer_mysql_rotate.pl  rotation.ini
share/: app.js  controller.js  homer.js  index.html  message.html  profile.js  search.js  transaction.html
src/: VERSION.ts  env.js  index.html  main.ts  polyfills.ts  styles.scss  theme.scss  tsconfig.app.json  tslint.json  typings.d.ts  upgrade.html
templates/: dashboard.html  footer.html  header.html  left-panel.html  shortcut.html
(+812 files in other folders)
